# game-versus-fight

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.json
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_tests
docs/: SDL3-API-Category.md  SDL3-wiki.md  SDL3_image-CategoryAPI.md  SDL_AudioStream.md  dependance.md  epic-b1-implementation-note.md  epics.md  game-architecture.md  gdd.md  implementation-summary-2026-03-12.md  implementation-summary-2026-03-13-assets-audio.md  implementation.md  module-contracts.md  requested-fixes-summary-2026-03-12.md  rule.md  utility.md
include/: ai.h  arena.h  combat.h  constants.h  engine.h  types.h  ui.h  utils.h
include/core/: constants.h  types.h
include/engine/: engine.h  input.h  sdl3_image_compat.h
include/game/: config.h  game.h
include/game/ai/: ai.h  ai_types.h
include/game/arena/: arena.h
include/game/combat/: combat.h
include/render/: animation.h  assets.h  render.h
include/ui/: menu.h
include/utils/: log.h  math_utils.h  memory.h  utils.h
prototype/include/: arena.h  constants.h  engine.h  game.h
prototype/src/: main.c
prototype/src/ai/: cache.h  evaluator.c  minmax.c
prototype/src/arena/: generator.c  seed.c  seed.h  tiles.c  validator.c  validator.h
prototype/src/combat/: attacks.h  character.c  physics.c  sword.h
prototype/src/engine/: animation.h  assets.h  audio.c  debug.h  input.c  render.h  timing.c  timing.h
prototype/src/game/: config.h  hud.c  match.c
prototype/src/utils/: logging.c  math.h  memory.c  utils.c
saved_maps/: Large_240x10_1773425722.map  Large_240x20_1773425721.map  Large_240x20_1774524578.map  Large_240x20_1774525679.map  Large_320x21_1773358419.map  Medium_280x18_1773357453.map  Medium_280x18_1773357454.map  Medium_280x18_1773425724.map  Medium_280x18_1774524577.map  Small_96x14_1773425723.map  Small_96x14_1773426524.map  Small_96x14_1774524575.map  Small_96x14_1774524576.map
scripts/: check_architecture.sh
src/: main.c
src/ai/: ai.c  cache.c  difficulty.c  difficulty.h  evaluator.c  evaluator.h  minmax.c  minmax.h  state.c  state.h
src/arena/: arena.c  generator.c  generator.h  tiles.h
src/combat/: attacks.c  attacks.h  character.c  character.h  combat.c  momentum.c  momentum.h  parry.h  physics.c  physics.h  sword.c  sword.h
src/engine/: animation.c  assets.c  audio.c  audio.h  debug.c  engine.c  engine.h  engine_internal.h  input.c  input.h  render.c  render.h  sdl3_image_compat.h
src/game/: config.c  config.h  game.c  game.h  game_internal.h  hud.c  hud.h  match.c  match.h  menu.c  menu.h
src/game/ai/: ai.c  ai_internal.h
src/game/arena/: arena.c  arena_gen.c  arena_internal.h  arena_validate.c
src/game/combat/: attacks.c  character.c  combat.c  combat_internal.h  physics.c
src/render/: animation.c  assets.c  render.c  render_internal.h  render_menu.c  render_victory.c
src/ui/: menu.c
src/utils/: constants.h  log.c  logging.c  logging.h  math.c  memory.c  memory.h  utils.c
tests/: test_ai.c  test_arena.c  test_combat.c  test_common.h  test_engine.c  test_game.c  test_generation.c  test_main.c
